--- a/ex/travel-tip-starter/css/cmps/locs.css
+++ b/ex/travel-tip-starter/css/cmps/locs.css
@@ -13,16 +13,27 @@
     padding-bottom: .2em;
     border-bottom: 1px solid #222;
 }
+
 .loc-list li h4 {
     display: flex;
     justify-content: space-between;
+
+    margin-bottom: 0;
+
+    font-size: 1.5rem;
+}
+
+.distance {
+    margin: 0;
+    
+    font-size: 1rem;
 }
 
 .loc-list li.active {
     color: var(--color3);
 }
 
-.loc-list li.active .muted{
+.loc-list li.active .muted {
     color: var(--color4);
 }
 
@@ -47,6 +58,7 @@
     width: 2em;
     height: 2em;
 }
+
 .btn-user-pos:hover {
     background-color: whitesmoke;
 }
@@ -81,4 +93,10 @@
     width: 1em;
     height: 1em;
     margin-inline-end: 0.3em;
+}
+
+.loc-address {
+    margin: 0;
+    margin-top: 1em;
+    margin-bottom: 3em;
 }
