--- a/ex/travel-tip-starter/css/base/vars.css
+++ b/ex/travel-tip-starter/css/base/vars.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
     --bg1: darkslateblue;
     --bg2: darkorchid;
     --bg3: darkmagenta;
@@ -7,7 +7,7 @@
     --color3: gold;
     --color4: goldenrod;
     --gray1: lightgray;
-}
+} */
 
 /* Another theme */
 /* :root {
@@ -19,4 +19,18 @@
     --color3: rgb(211, 187, 48);
     --color4: rgb(90, 66, 6);
     --gray1: lightgray;
-} */
+}
+ */
+
+
+/* Another theme */
+:root {
+    --bg1: rgb(255, 141, 141);
+    --bg2: rgb(192, 54, 36);
+    --bg3: rgb(228, 114, 114);
+    --color1: aliceblue;
+    --color2: rgb(94, 169, 240);
+    --color3: rgb(211, 187, 48);
+    --color4: rgb(90, 66, 6);
+    --gray1: lightgray;
+}
